// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KpiWidget should render component having healthy icon: percentDiv 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  top: -1px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: var(--acx-semantics-green-30);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-body-2-font-size);
  font-weight: var(--acx-body-font-weight-bold);
}

.c0 {
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
  class="ant-space ant-space-horizontal ant-space-align-center c0"
>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="c2"
    >
      100%
    </span>
  </div>
</div>
`;

exports[`KpiWidget should render component having major icon: percentDiv 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  top: -1px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: var(--acx-accents-orange-30);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-body-2-font-size);
  font-weight: var(--acx-body-font-weight-bold);
}

.c0 {
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
  class="ant-space ant-space-horizontal ant-space-align-center c0"
>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="c2"
    >
      33%
    </span>
  </div>
</div>
`;

exports[`KpiWidget should render component having major icon: svg 1`] = `
@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<svg
  baseProfile="full"
  height="800"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="1280"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="800"
    id="0"
    width="1280"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr4-c0)"
    >
      <path
        d="M320 39.9048C320 39.9048 960 39.9048 960 39.9048L960 798L320 798Z"
        fill="url(#zr4-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M320 39.9048C320 39.9048 960 39.9048 960 39.9048"
        fill="none"
        stroke="#23AB36"
        stroke-linejoin="bevel"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr4-c0"
    >
      <path
        d="M-1 1.5l1281 0l0 797l-1281 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr4-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#88D392"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;

exports[`KpiWidget should render component properly with sparkline: percentDiv 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  top: -1px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: var(--acx-semantics-green-30);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-body-2-font-size);
  font-weight: var(--acx-body-font-weight-bold);
}

.c0 {
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
  class="ant-space ant-space-horizontal ant-space-align-center c0"
>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="c2"
    >
      94%
    </span>
  </div>
</div>
`;

exports[`KpiWidget should render component properly with sparkline: svg 1`] = `
@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<svg
  baseProfile="full"
  height="800"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="1280"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="800"
    id="0"
    width="1280"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr2-c0)"
    >
      <path
        d="M80 798C80 798 211.9642 798 240 798C371.9642 798 269.5935 326.804 400 62.0755C429.5935 2 532.1772 2 560 2C692.1772 2 586.3396 798 720 798C746.3396 798 800 798 880 798C960 798 960 798 1040 798C1120 798 1200 798 1200 798L1040 798L880 798L720 798L560 798L400 798L240 798L80 798Z"
        fill="url(#zr2-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M80 798C80 798 211.9642 798 240 798C371.9642 798 269.5935 326.804 400 62.0755C429.5935 2 532.1772 2 560 2C692.1772 2 586.3396 798 720 798C746.3396 798 800 798 880 798C960 798 960 798 1040 798C1120 798 1200 798 1200 798"
        fill="none"
        stroke="#23AB36"
        stroke-linejoin="bevel"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr2-c0"
    >
      <path
        d="M-1 1.5l1281 0l0 797l-1281 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr2-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#88D392"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;

exports[`KpiWidget should render for empty data: percentDiv 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  top: -1px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: var(--acx-semantics-red-50);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-body-2-font-size);
  font-weight: var(--acx-body-font-weight-bold);
}

.c0 {
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
  class="ant-space ant-space-horizontal ant-space-align-center c0"
>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    <span
      class="c1"
    />
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="c2"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`KpiWidget should render for empty data: svg 1`] = `
@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<svg
  baseProfile="full"
  height="800"
  style="position:absolute;left:0;top:0;user-select:none"
  version="1.1"
  width="1280"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    fill="none"
    fill-opacity="1"
    height="800"
    id="0"
    width="1280"
    x="0"
    y="0"
  />
  <g>
    <g
      clip-path="url(#zr1-c0)"
    >
      <path
        d="M320 798C320 798 960 798 960 798L320 798Z"
        fill="url(#zr1-g0)"
        fill-opacity="0.7"
      />
      <path
        d="M320 798C320 798 960 798 960 798"
        fill="none"
        stroke="#23AB36"
        stroke-linejoin="bevel"
      />
    </g>
  </g>
  <defs>
    <clippath
      id="zr1-c0"
    >
      <path
        d="M-1 1.5l1281 0l0 797l-1281 0Z"
        fill="#000"
      />
    </clippath>
    <lineargradient
      gradientUnits="objectBoundingBox"
      id="zr1-g0"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#88D392"
      />
      <stop
        offset="100%"
        stop-color="#FFFFFF"
      />
    </lineargradient>
  </defs>
</svg>
`;

exports[`KpiWidget should return proper Kpi info text 1`] = `
Object {
  "current": Object {
    "clientThroughput": Object {
      "shortText": "Above 10 Mbps",
      "title": "Client Throughput",
      "tooltip": "12.3K of 23.5K sessions above 10 Mbps",
    },
    "connectionSuccess": Object {
      "shortText": "",
      "title": "Connection Success",
      "tooltip": "12.3K of 23.5K attempts",
    },
    "timeToConnect": Object {
      "shortText": "Under 10 s",
      "title": "Time To Connect",
      "tooltip": "12.3K of 23.5K connections under 10 seconds",
    },
  },
}
`;
